--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "helmet": "^6.1.1",
     "joi": "^17.7.1",
     "method-override": "^3.0.0",
+    "mongodb": "^5.2.0",
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
